--- a/src/locale/zh_TW/LC_MESSAGES/trad.po
+++ b/src/locale/zh_TW/LC_MESSAGES/trad.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: memwrite\n"
+"Project-Id-Version: winusb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-14 00:08+0100\n"
 "PO-Revision-Date: 2016-07-09 20:51+0800\n"
