src: s/WinUSB/WinUSB+
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/locale/default.po
+++ b/src/locale/default.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: winusb\n"
+"Project-Id-Version: winusb+\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-14 00:07+0100\n"
 "PO-Revision-Date: 2011-07-14 00:07+0100\n"
