src: s/WinUSB/WinUSB+/
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/locale/fr/LC_MESSAGES/trad.po
+++ b/src/locale/fr/LC_MESSAGES/trad.po
@@ -145,8 +145,8 @@ msgid "bytes"
 msgstr "octets"
 
 #: ../../../AppConfig.hpp:7
-msgid "WinUSB"
-msgstr "WinUSB"
+msgid "WinUSB+"
+msgstr "WinUSB+"
 
 #: ../../../DialogAbout.hpp:68
 msgid "About"
