--- a/src/woeusbgui.1
+++ b/src/woeusbgui.1
@@ -1,13 +1,13 @@
-.\" winusbgui man page. 
+.\" woeusbgui man page. 
 .\" Contact colingille@hotmail.com to correct errors or omissions. 
-.TH man 6 "3 October 2010" "1.0" "winusbgui"
+.TH man 6 "3 October 2010" "1.0" "woeusbgui"
 .SH NAME
-winusbgui \- A graphical interface for wingui.
+woeusbgui \- A graphical interface for wingui.
 .SH SYNOPSIS
 .\" Syntax goes here. 
-.B winusbgui
+.B woeusbgui
 .SH DESCRIPTION
-launches the winusbgui programm. There are no command line switches yet.
+launches the woeusbgui programm. There are no command line switches yet.
 .SH AUTHOR
 .nf
 Colin GILLE / congelli501 (colingille@hotmail.com)
