manpages: Fix obselute content
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -6,8 +6,7 @@ woeusb \- A simple command line tool to create Windows Installation's USB stick 
 .\" Syntax goes here. 
 .B woeusb
 .SH DESCRIPTION
-launches the woeusb program. There are no command line switches yet.
-See woeusb --help for more information.
+This manpage is currently not completed, refer `woeusb --help` for usage of woeusb
 .SH AUTHOR
 .nf
 Colin GILLE / congelli501 (colingille@hotmail.com)
