--- a/src/woeusbgui.1
+++ b/src/woeusbgui.1
@@ -1,12 +1,12 @@
 .\" woeusbgui man page. 
 .TH man 6 "3 October 2010" "1.0" "woeusbgui"
 .SH NAME
-woeusbgui \- A graphical interface for wingui.
+woeusbgui \- A graphical interface for woeusb(1).
 .SH SYNOPSIS
 .\" Syntax goes here. 
 .B woeusbgui
 .SH DESCRIPTION
-launches the woeusbgui programm. There are no command line switches yet.
+There are no command line switches yet.
 .SH AUTHOR
 .nf
 Colin GILLE / congelli501 (colingille@hotmail.com)
