--- a/src/woeusbgui.1
+++ b/src/woeusbgui.1
@@ -1,4 +1,5 @@
-.\" woeusbgui man page. 
+.\" Linux Man Page Howto
+.\" http://www.schweikhardt.net/man_page_howto.html
 .TH man 6 "3 October 2010" "1.0" "woeusbgui"
 .SH NAME
 woeusbgui \- A graphical interface for woeusb(1).
