manpages: Fix TH syntax
The previous manpages pretty much wrongly used the TH syntax, correct them

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -1,4 +1,4 @@
-.TH man 6 "3 October 2010" "1.0" "woeusb"
+.TH woeusb 1 "The WoeUSB Project" "" "WoeUSB User Manual"
 .SH NAME
 woeusb \- A simple command line tool to create Windows Installation's USB stick under Linux.
 .SH SYNOPSIS
