--- a/src/woeusbgui.1
+++ b/src/woeusbgui.1
@@ -1,4 +1,4 @@
-.TH man 6 "3 October 2010" "1.0" "woeusbgui"
+.TH woeusbgui 1 "The WoeUSB Project" "" "WoeUSB User Manual"
 .SH NAME
 woeusbgui \- A graphical interface for woeusb(1).
 .SH SYNOPSIS
