--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ woeusb (@@WOEUSB_VERSION@@) unstable; urgency=low
 
   * This is a fake changelog for packaging purpose, for the actual changelog please refer Commits · slacka/WoeUSB <https://github.com/slacka/WoeUSB/commits>
 	
- -- 林博仁 <Buo.Ren.Lin@gmail.com>  Mon, 12 Jun 2017 09:04:00 +0100
+ -- 林博仁 (Buo-Ren, Lin) <Buo.Ren.Lin@gmail.com>  Mon, 12 Jun 2017 09:04:00 +0100
