src/locale: Set contact info to WoeUSB's issue tracker
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/locale/fr/LC_MESSAGES/trad.po
+++ b/src/locale/fr/LC_MESSAGES/trad.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: woeusb\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: WoeUSB Issue Tracker <https://github.com/slacka/WoeUSB/issues>\n"
 "POT-Creation-Date: 2011-07-14 00:08+0100\n"
 "PO-Revision-Date: 2011-07-14 00:13+0100\n"
 "Last-Translator: GILLE Colin <colingille@hotmail.com>\n"
-"Language-Team: Colin GILLE / Congelli501 <colingille@hotmail.com>\n"
+"Language-Team: WoeUSB Issue Tracker <https://github.com/slacka/WoeUSB/issues>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
