--- a/src/locale/zh_TW/LC_MESSAGES/trad.po
+++ b/src/locale/zh_TW/LC_MESSAGES/trad.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: winusb\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: WoeUSB Issue Tracker <https://github.com/slacka/WoeUSB/issues>\n"
 "POT-Creation-Date: 2011-07-14 00:08+0100\n"
 "PO-Revision-Date: 2016-07-09 20:51+0800\n"
 "Last-Translator: Ｖ字龍 <Vdragon.Taiwan@gmail.com>\n"
