Fix typo detected by lintian spelling-error-in-binary
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/locale/fr/LC_MESSAGES/woeusb.po
+++ b/src/locale/fr/LC_MESSAGES/woeusb.po
@@ -120,7 +120,7 @@ msgid "Cancel"
 msgstr "Annuler"
 
 #: ../../../MainPanel.cpp:312
-msgid "Installation succeded !"
+msgid "Installation succeeded !"
 msgstr "Installation réussie !"
 
 #: ../../../MainPanel.cpp:312
