Fix small grammar errors

--- a/src/locale/fr/LC_MESSAGES/woeusb.po
+++ b/src/locale/fr/LC_MESSAGES/woeusb.po
@@ -17,7 +17,7 @@ msgstr ""
 "X-Poedit-SearchPath-0: ../../..\n"
 
 #: ../../../MainFrame.cpp:41
-msgid "Show all drive"
+msgid "Show all drives"
 msgstr "Montrer tous les disques"
 
 #: ../../../MainFrame.cpp:41
@@ -61,9 +61,9 @@ msgstr "Développeur"
 #: ../../../DialogAbout.cpp:58
 #, c-format
 msgid ""
-"%s is free software: you can redistribute it and/or modifyit under the terms of the GNU General Public License as published bythe Free Software Foundation, either version 3 of the License, or(at your option) any later version.\n"
+"%s is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n"
 "\n"
-"%s is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty ofMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See theGNU General Public License for more details.\n"
+"%s is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See theGNU General Public License for more details.\n"
 "\n"
 "You should have received a copy of the GNU General Public Licensealong with %s.  If not, see <http://www.gnu.org/licenses/>."
 msgstr ""
