manpages: woeusb: Add missing --workaround-bios-boot-flag option
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -73,6 +73,9 @@ Label for the newly created file system in
 installation mode.
 
 Note that the label is not verified for validity and may be illegal for the filesystem
+.TP
+.B --workaround-bios-boot-flag
+Apply workaround for buggy BIOSes that doesn't consider a device bootable if none of its partition's boot flag is toggled.
 
 .SH EXAMPLES
 We love examples!
