--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -22,17 +22,13 @@ to
 It also supports UEFI bootstrap scheme, however in this case Windows UEFI bootloader is used instead.
 .PP
 
-Currently
-.B woeusb
-only support FAT32 filesystem, thus the generated filesystem has a 4GiB single file size limit.  NTFS may be supported in the future.
-
 .SH COMMAND\-LINE OPTIONS
 .SS INSTALLATION MODE
 .TP
 .B --device / -d
 Drop
 .I target_media
-\'s partition table, recreate a new PC/Legacy/MBR partition table, create a FAT32 partition spanning (almost) the full disk, then setup bootable Windows on it.
+\'s partition table, recreate a new PC/Legacy/MBR partition table, create a FAT32/NTFS partition spanning (almost) the full disk, then setup bootable Windows on it.
 
 WARNING: ALL PREVIOUS DATA ON TARGET MEDIA WILL BE DROPPED!
 
@@ -76,6 +72,10 @@ Note that the label is not verified for validity and may be illegal for the file
 .TP
 .B --workaround-bios-boot-flag
 Apply workaround for buggy BIOSes that doesn't consider a device bootable if none of its partition's boot flag is toggled.
+.TP
+.B --target-filesystem / --tgt-fs
+Specify the filesystem to use as the target partition's filesystem.
+Currently supported: FAT(default)/NTFS
 
 .SH EXAMPLES
 We love examples!
