manpages: woeusb(1): Semantic improvement
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -32,7 +32,7 @@ only support FAT32 filesystem, thus the generated filesystem has a 4GiB single f
 .B --device / -d
 Drop
 .I target_media
-\'s partition table, recreate a new PC/Legacy/MBR partition table, create a FAT32 partition spanning (almost) the full disk, then setup bootable Windows on it.
+\'s partition table, recreate a new PC/Legacy/MBR partition table, create a FAT32 partition spanning (almost) the entire disk, then setup bootable Windows on it.
 
 WARNING: ALL PREVIOUS DATA ON TARGET MEDIA WILL BE DROPPED!
 
