src/woeusb: Implement --debugging-internal-function-call for easy testing
This parameter allows developer to test certain function with custum parameters without doing entire routine

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -76,7 +76,9 @@ Note that the label is not verified for validity and may be illegal for the file
 .TP
 .B --workaround-bios-boot-flag
 Apply workaround for buggy BIOSes that doesn't consider a device bootable if none of its partition's boot flag is toggled.
-
+.TP
+\fB--debugging-internal-function-call\fR\fIfunction_name (function_parameters...)\fR
+Development option for developers to test certain function without running the entire build
 .SH EXAMPLES
 We love examples!
 
