src/woeusb - Fix wrong option short version name
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -59,7 +59,7 @@ COMPATIBILITY: This mode is previously named
 .B --verbose / -v
 Be more verbose
 .TP
-.B --debug / -d
+.B --debug
 Enable script debugging
 .TP
 .B --no-color
