manpages: woeusb(1): Add missing --help option
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -56,6 +56,9 @@ COMPATIBILITY: This mode is previously named
 
 .SS MISCELLANEOUS
 .TP
+.B --help / -h
+Print application help message
+.TP
 .B --verbose / -v
 Be more verbose
 .TP
