src/woeusb: Support --version option
Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -59,6 +59,9 @@ COMPATIBILITY: This mode is previously named
 .B --help / -h
 Print application help message
 .TP
+.B --version / -V
+Print application version
+.TP
 .B --verbose / -v
 Be more verbose
 .TP
