Refactoring: Eliminate global parameters even further, implement --about
* Localize app_name, app_version and DEFAULT_NEW_FS_LABEL parameters to init
* Document about global parameters left
* Add flags to toggle in process_commandline_arguments and deal with --help/--version/--about later in newly created process_miscellaneous_request function, this helps detecting error conditions directly in process_cmdline_params.
* --debugging-internal-function-call: Fix none parameter condition checking
* Reimplement --device, --partition option collide error condition
* Reimplement --partition, --label option collide error condition
* Implement --about option to print software info and exit
* Introduces app_site_url, app_cpyright_declaration and app_cpyright_notice parameters to hold such info

Signed-off-by: 林博仁 <Buo.Ren.Lin@gmail.com>

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -62,6 +62,9 @@ Print application help message
 .B --version / -V
 Print application version
 .TP
+.B --about / -ab
+Print info about this application
+.TP
 .B --verbose / -v
 Be more verbose
 .TP
