--- a/src/woeusbgui.1
+++ b/src/woeusbgui.1
@@ -8,9 +8,9 @@ woeusbgui \- A GUI wrapper for woeusb(1)
 .SH DESCRIPTION
 This is a GUI wrapper for woeusb(1), currently it only support
 .B --device
-installation mode.
+creation method.
 .PP
-It is advised to use woeusb(1) instead, as it is more will-maintained and support more installation mode.
+It is advised to use woeusb(1) instead, as it is more will-maintained and support more creation methods.
 
 .SH OPTIONS
 There are no command line options yet.
