--- a/src/locale/woeusb.pot
+++ b/src/locale/woeusb.pot
@@ -40,7 +40,7 @@ msgid "Error..."
 msgstr ""
 
 #: ../App.cpp:117
-msgid "Unknown error as occured !"
+msgid "Unknown error as occured!"
 msgstr ""
 
 #: ../App.cpp:124
@@ -104,7 +104,7 @@ msgstr ""
 
 #: ../MainPanel.cpp:270
 #: ../MainPanel.cpp:289
-msgid "Are you sure you want to cancel the insatallation ?"
+msgid "Are you sure you want to cancel the installation?"
 msgstr ""
 
 #: ../MainPanel.cpp:270
@@ -113,7 +113,7 @@ msgid "Cancel"
 msgstr ""
 
 #: ../MainPanel.cpp:312
-msgid "Installation succeded !"
+msgid "Installation succeded!"
 msgstr ""
 
 #: ../MainPanel.cpp:312
@@ -122,7 +122,7 @@ msgid "Installation"
 msgstr ""
 
 #: ../MainPanel.cpp:316
-msgid "Installation failed !"
+msgid "Installation failed!"
 msgstr ""
 
 #: ../findFile.cpp:54
