Manpages: woeusbgui(1): Fix typo
Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/src/woeusbgui.1
+++ b/src/woeusbgui.1
@@ -10,7 +10,7 @@ This is a GUI wrapper for woeusb(1), currently it only support
 .B --device
 creation method.
 .PP
-It is advised to use woeusb(1) instead, as it is more will-maintained and support more creation methods.
+It is advised to use woeusb(1) instead, as it is more well-maintained and support more creation methods.
 
 .SH OPTIONS
 There are no command line options yet.
