Add current main authors of WoeUSB

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Colin GILLE / congelli501 <colingille@hotmail.com>
+Colin GILLE (Congelli501) <colingille@hotmail.com>
+Luke Benes (slacka) <lukebenes@yahoo.com>
+林博仁 (Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>
