Manpages: woeusb(1): Fix typo

--- a/src/woeusb.1
+++ b/src/woeusb.1
@@ -9,7 +9,7 @@ woeusb \- Bootable Windows installation/PE USB storage creator
 
 .SH DESCRIPTION
 .B woeusb
-is an command-line utility that enables you to create your own bootable Windows installation USB storage device from an existing Windows Installation DVD or its ISO image.
+is a command-line utility that enables you to create your own bootable Windows installation USB storage device from an existing Windows Installation DVD or its ISO image.
 .PP
 
 It mainly extracts all files from
@@ -98,11 +98,11 @@ Copy Windows files to an existing FAT partition of a USB storage device and make
 0 when success, 1 (and non-zero if there's any) when failure
 
 .SH BUGS
-Refer our
+Refer to our
 .UR https://github.com/slacka/WoeUSB/issues
 issue tracker
 .UE
- for any known issues
+for any known issues
 .br
 
 .SH SEE ALSO
