--- a/src/locale/pl_PL/LC_MESSAGES/woeusb.po
+++ b/src/locale/pl_PL/LC_MESSAGES/woeusb.po
@@ -1,161 +1,122 @@
+# Polish translations for woeusb package
+# Polskie tłumaczenia dla pakietu woeusb.
+# Copyright (C) 2018 THE woeusb'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the woeusb package.
+# Jakub Szymański <jakubmateusz@poczta.onet.pl>, 2018.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: woeusb\n"
-"Report-Msgid-Bugs-To: WoeUSB Issue Tracker <https://github.com/slacka/WoeUSB/issues>\n"
-"POT-Creation-Date: 2011-07-14 00:07+0100\n"
-"PO-Revision-Date: 2011-07-14 00:07+0100\n"
-"Last-Translator: GILLE Colin <colingille@hotmail.com>\n"
-"Language-Team: WoeUSB Issue Tracker <https://github.com/slacka/WoeUSB/issues>\n"
-"Language: \n"
+"Report-Msgid-Bugs-To: WoeUSB Issue Tracker <https://github.com/slacka/WoeUSB/"
+"issues>\n"
+"POT-Creation-Date: 2018-07-30 15:09+0200\n"
+"PO-Revision-Date: 2018-07-30 15:34+0200\n"
+"Last-Translator: Jakub Szymański <jakubmateusz@poczta.onet.pl>\n"
+"Language-Team: Polish\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Basepath: .\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 2.0.9\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../MainFrame.cpp:41
+#: woeusbgui:67
 msgid "Show all drives"
 msgstr "Pokaż wszystkie dyski"
 
-#: ../MainFrame.cpp:41
+#: woeusbgui:68
 msgid "Show all drives, even those not detected as USB stick."
-msgstr "Pokaż wszystkie dyski, nawet jeśli system nie widzi ich jako pamięci na USB"
-
-#: ../MainFrame.cpp:53
-msgid "&File"
-msgstr "Plik"
-
-#: ../MainFrame.cpp:54
-msgid "&Help"
-msgstr "Pomoc"
-
-#: ../App.cpp:82
-msgid "Error : "
-msgstr "Błąd : "
-
-#: ../App.cpp:82
-#: ../App.cpp:124
-msgid "Error..."
-msgstr "Błąd..."
-
-#: ../App.cpp:117
-msgid "Unknown error as occured!"
-msgstr "Wystąpił nieznany błąd!"
-
-#: ../App.cpp:124
-msgid "Fatal error : "
-msgstr "Błąd krytyczny : "
-
-#: ../DialogAbout.cpp:46
-#, c-format
-msgid "Version %s"
-msgstr "Wersja %s"
-
-#: ../DialogAbout.cpp:55
-msgid "Developer"
-msgstr "Deweloper"
-
-#: ../DialogAbout.cpp:58
-#, c-format
-msgid ""
-"%s is free software: you can redistribute it and/or modifyit under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n"
-"\n"
-"%s is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See theGNU General Public License for more details.\n"
-"\n"
-"You should have received a copy of the GNU General Public Licensealong with %s.  If not, see <http://www.gnu.org/licenses/>."
 msgstr ""
+"Pokaż wszystkie dyski, nawet jeśli system nie widzi ich jako pamięci na USB."
 
-#: ../DialogAbout.cpp:73
-msgid "License"
-msgstr "Licencja"
-
-#: ../MainPanel.cpp:45
-msgid "Source :"
-msgstr "Źródło :"
-
-#: ../MainPanel.cpp:48
-msgid "From a disk image (iso)"
-msgstr "Z pliku (iso) na dysku"
-
-#: ../MainPanel.cpp:53
-msgid "Please select a disk image"
-msgstr "Prosze wybierz obraz dysku"
-
-#: ../MainPanel.cpp:58
-msgid "From a CD/DVD drive"
-msgstr "Z napędu optycznego"
-
-#: ../MainPanel.cpp:70
-msgid "Target device :"
-msgstr "Urządzenie docelowe"
-
-#: ../MainPanel.cpp:81
-msgid "Install"
-msgstr "Instaluj"
-
-#: ../MainPanel.cpp:247
-msgid "Installing.."
-msgstr "Instalacja..."
-
-#: ../MainPanel.cpp:247
-msgid "Please wait..."
-msgstr "Proszę czekać..."
-
-#: ../MainPanel.cpp:270
-#: ../MainPanel.cpp:289
-msgid "Are you sure you want to cancel the installation?"
-msgstr "Jesteś pewnien że chcesz przerwać instalacje?"
-
-#: ../MainPanel.cpp:270
-#: ../MainPanel.cpp:289
-msgid "Cancel"
-msgstr "Przerwi"
-
-#: ../MainPanel.cpp:312
-msgid "Installation succeded!"
-msgstr "Pomyślnie zainstalowano"
-
-#: ../MainPanel.cpp:312
-#: ../MainPanel.cpp:316
-msgid "Installation"
-msgstr "Instalacja"
-
-#: ../MainPanel.cpp:316
-msgid "Installation failed!"
-msgstr "Instalacja zakończona niepowodzeniem"
-
-#: ../findFile.cpp:54
-msgid "File not Found : "
-msgstr "Pliku nie znaleziono"
-
-#: ../findFile.cpp:54
-msgid "Error"
-msgstr "Błąd"
-
-#: ../strWxStdConv.hpp:106
-msgid "bytes"
-msgstr "bajty"
-
-#: ../AppConfig.hpp:7
-msgid "WoeUSB"
-msgstr ""
-
-#: ../DialogAbout.hpp:68
-msgid "About"
-msgstr "O programie"
-
-msgid "&Options"
-msgstr "Opcje"
-
+#: woeusbgui:78
 msgid "Set boot flag"
-msgstr "Ustaw flagę \"boot\""
+msgstr "Ustaw flagę boot"
 
+#: woeusbgui:79
 msgid "Sets boot flag after process of copying."
-msgstr "Ustawia flagę \"boot\" po zakończeniu kopiowania"
+msgstr "Ustawia flagę \"boot\" po zakończeniu kopiowania."
 
+#: woeusbgui:81
 msgid "Use NTFS"
 msgstr "Użyj NTFS"
 
+#: woeusbgui:82
 msgid "Use NTFS instead of FAT. NOTE: NTFS seems to be slower than FAT."
-msgstr "Użyj NTFS zamiast FAT. Notka: NTFS zdaje się być wolniejszy od FAT"
+msgstr "Użyj NTFS zamiast FAT. Notka: NTFS zdaje się być wolniejszy od FAT."
+
+#: woeusbgui:88
+msgid "&File"
+msgstr "&Plik"
+
+#: woeusbgui:89
+msgid "&Options"
+msgstr "&Opcje"
+
+#: woeusbgui:90
+msgid "&Help"
+msgstr "&Pomoc"
+
+#: woeusbgui:146
+msgid "Source :"
+msgstr "Źródło :"
+
+#: woeusbgui:149
+msgid "From a disk image (iso)"
+msgstr "Z pliku (iso) na dysku"
+
+#: woeusbgui:154
+msgid "Please select a disk image"
+msgstr "Prosze wybierz obraz dysku"
+
+#: woeusbgui:160
+msgid "From a CD/DVD drive"
+msgstr "Z napędu optycznego"
+
+#: woeusbgui:173
+msgid "Target device :"
+msgstr "Urządzenie docelowe :"
+
+#: woeusbgui:185
+msgid "Install"
+msgstr "Instaluj"
+
+#: woeusbgui:275
+msgid "Installing"
+msgstr "Instalacja"
+
+#: woeusbgui:275
+msgid "Please wait..."
+msgstr "Proszę czekać..."
+
+#: woeusbgui:286
+msgid "Are you sure you want to cancel the installation?"
+msgstr "Jesteś pewnien że chcesz przerwać instalacje?"
+
+#: woeusbgui:286
+msgid "Cancel"
+msgstr "Przerwi"
+
+#: woeusbgui:295
+msgid "Installation succeeded!"
+msgstr "Instalacja!"
+
+#: woeusbgui:295 woeusbgui:297
+msgid "Installation"
+msgstr "Instalacja"
+
+#: woeusbgui:297
+msgid "Installation failed!"
+msgstr "Instalacja zakończona niepowodzeniem!"
+
+#: woeusbgui:312
+msgid "About"
+msgstr "O programie"
+
+#: woeusbgui:370
+msgid "License"
+msgstr "Licencja"
